added group first and last names

--- a/PA6.qmd
+++ b/PA6.qmd
@@ -3,6 +3,7 @@ title: "Practice Activity 6"
 format: html
 editor: visual
 self-contained: true
+author: "Dani Wells, Abby Drongpa, Claire Savage"
 ---
 
 ## Quarto
